added file management capability

--- a/configurator/templates/delete_file.yaml
+++ b/configurator/templates/delete_file.yaml
@@ -5,5 +5,7 @@ hosts:
 user: ntata
 password: tiptop123
 action: 
-  install-pkg:
-  - vim
+  delete-file:
+    metadata:
+      name: test-3.php
+      path: /var/www/html
