--- a/configurator/templates/create_file.yaml
+++ b/configurator/templates/create_file.yaml
@@ -1,11 +1,11 @@
 ---
 hosts:
-- 18.191.242.16
-- 13.59.83.101
+- 54.196.242.68
+- 34.229.127.246
 action: 
   create-file:
     metadata:
-      name: hello-world.php
+      name: index.php
       user_owner: root 
       group_owner: root 
       numeric_mode: 644
