--- a/configurator/templates/delete_file.yaml
+++ b/configurator/templates/delete_file.yaml
@@ -1,9 +1,9 @@
 ---
 hosts:
-- 18.191.242.16
-- 13.59.83.101
+- 54.196.242.68
+- 34.229.127.246
 action: 
   delete-file:
     metadata:
-      name: hello-world.php
+      name: index.php
       path: /var/www/html
